apply Andy's patch